[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/weapon.gd" type="Script" id=1]

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]

[node name="RefireTimer" type="Timer" parent="."]

[node name="RechargeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
